--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <h2>Soy un titulo</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora quasi perspiciatis inventore ea cum
                     fugit earum id eius itaque saepe!</p>
+                <button>VER MAS</button>
         </div>
     </main>
 </body>
