agregue otro parrafo2

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
                     fugit earum id eius itaque saepe!</p>
                 <button>VER MAS</button>
         </div>
+        <div class="texto-centrado">
+            <h2>Soy otro titulo</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora quasi perspiciatis inventore ea cum
+                    fugit earum id eius itaque saepe!</p>
+                <button>VER MAS</button>
+        </div>
     </main>
 </body>
 
