--- a/index.html
+++ b/index.html
@@ -24,10 +24,16 @@
                 <button>VER MAS</button>
         </div>
         <div class="texto-centrado">
-            <h2>Soy otro titulo</h1>
+            <h2>Soy oootro titulo</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora quasi perspiciatis inventore ea cum
                     fugit earum id eius itaque saepe!</p>
                 <button>VER MAS</button>
+        </div>
+        <div class="texto-centrado">
+            <h2>Soy un nuevo titulo</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora quasi perspiciatis inventore ea cum
+                    fugit earum id eius itaque saepe!</p>
+                <button>LLEVAME DE ACA</button>
         </div>
     </main>
 </body>
