--- a/index.html
+++ b/index.html
@@ -5,37 +5,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 
 <body>
     <main>
-        <div class="texto-centrado">
-            <h2>Soy un titulo</h1>
+        <div class="texto-centrado parrafo1">
+            <h2 class="wow animate__animated animate__backInLeft">Soy un titulo</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora quasi perspiciatis inventore ea cum
+                    fugit earum id eius itaque saepe!</p>
+                <button class="wow animate__animated animate__zoomInDown">VER MAS</button>
+        </div>
+        <div class="texto-centrado parrafo2">
+            <h2 class="wow animate__animated animate__bounceIn">Soy otro titulo</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora quasi perspiciatis inventore ea cum
                     fugit earum id eius itaque saepe!</p>
                 <button>VER MAS</button>
         </div>
-        <div class="texto-centrado">
-            <h2>Soy otro titulo</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora quasi perspiciatis inventore ea cum
-                    fugit earum id eius itaque saepe!</p>
-                <button>VER MAS</button>
-        </div>
-        <div class="texto-centrado">
+        <div class="texto-centrado parrafo3">
             <h2>Soy oootro titulo</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora quasi perspiciatis inventore ea cum
+                <p class="wow animate__animated animate__fadeInRight">Lorem ipsum dolor sit amet consectetur,
+                    adipisicing elit. Tempora quasi perspiciatis inventore ea cum
                     fugit earum id eius itaque saepe!</p>
                 <button>VER MAS</button>
         </div>
-        <div class="texto-centrado">
+        <div class="texto-centrado parrafo4">
             <h2>Soy un nuevo titulo</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora quasi perspiciatis inventore ea cum
+                <p class="wow animate__animated animate__rotateInUpLeft">Lorem ipsum dolor sit amet consectetur,
+                    adipisicing elit. Tempora quasi perspiciatis inventore ea cum
                     fugit earum id eius itaque saepe!</p>
                 <button>LLEVAME DE ACA</button>
         </div>
     </main>
+
+    <script src="./js/wow.js"></script>
+    <script>
+        new WOW().init();
+    </script>
 </body>
 
 </html>
