--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora quasi perspiciatis inventore ea cum
                     fugit earum id eius itaque saepe!</p>
                 <button>VER MAS</button>
+
+                <p>que onda perri
+                </p>
+                <p>asi de facil?
+                </p>
         </div>
         <div class="texto-centrado">
             <h2>Soy otro titulo</h1>
